app/static/css/main.css
:root {
  --pink:#F86379;
  --black:#202346;
  --white:#ffffff;
  --overlay-color: rgba(24, 39, 51 , 0.85);
  --menu-speed: 0.75s;
}

html {
  scroll-behavior: smooth;
}

body {
  background: var(--black);
  color: #333333;
  margin-top: 5rem;
  margin: 0;
  padding: 0;
  font-family: 'Poppins', sans-serif;
  overflow-x: hidden;
}

h1{
  color:var(--pink);
  text-align: center;
}

p{
  color: var(--white);
}


/* start home */
#home{
  background: url('../images/home-min.jpg') 100% 100% no-repeat;
  background-size: cover;
  padding-top: 250px;
  min-height: 650px;
}

#home h1{
  font-weight: 300;
  font-size: 70px;
  padding-bottom: 10px;
}

.element {
  height: 60px;
  font-size: 22px;
  font-weight: bold;
  color: var(--white);
}

.errorImage{
  height: 20px;
  margin-right: 5px;
}

@media only screen and (max-width: 600px) {
  #home{
    background: url('../images/home.jpg') 100% 100% no-repeat;
    background-size: cover;
    padding-top: 100px;
    min-height: 450px;
  }

  .homeContent{
    margin-bottom: 300px;
    text-align: center;
  }

  .sub-elemet{
    text-align: center;
  }
}

/* end home */


        /*Upper container styling starts here */

.upperContainer{
  display: inline-block;
  width: 100%;
  margin-top: 30px;
  padding-bottom: 30px;
}

.upperContainer h1{
  text-decoration: underline;
}

        
        /*Route planner styling start*/
.stoptextbox{
  text-align: center;
  border:none;
  background-color: var(--black);
  border-bottom: 3px solid var(--pink);
  color:var(--white);
  margin-bottom: 20px;
  width:80%;
  text-decoration: none;
  font-size: 28px;
  margin-top: 10px;
}

::-webkit-input-placeholder { /* Edge */
  color: var(--white);
}

:-ms-input-placeholder { /* Internet Explorer 10-11 */
  color: var(--white);
}

::placeholder {
  color: var(--white);
}


.routePlanForm{
  text-align: center;
}

.addressBox{
  width:100%;
}

.routePlanButton{
  width: 60%;
  height: 45px;
  font-size: 30px;
  background-color: var(--pink);
  color: var(--white);
  text-decoration: none;
  border: 1px solid var(--pink);
  border-radius: 5px;
}

.routePlanResults{
  align-content: center;
  text-align: center;
}

.collapsible {
  background-color: var(--pink);
  color: var(--black);
  cursor: pointer;
  padding: 18px;
  width: 100%;
  border: none;
  text-align: left;
  outline: none;
  font-size: 20px;
  width: 80%;
  margin-left: 10%;
  margin-top: 10px;
  margin-bottom: 10px;
}

.active, .collapsible:hover {
  background-color: var(--white);
  color: var(--black);
}

.collapsible:after {
  content: '\002B';
  color: var(--black);
  font-weight: bold;
  float: right;
  margin-left: 5px;
}

.active:after {
  content: "\2212";
}

.content {
  padding: 0 18px;
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.2s ease-out;
  background-color: var(--white);
  width: 80%;
  margin-left: 10%;
  color:var(--black);
  margin-top: -10px;
}

.directionsbtn{
  text-align: center;
  background-color: var(--pink);
  border: 3px solid var(--pink);
  border-radius:2em;
  color:var(--white);
  margin-bottom: 10px;
  margin-top: 10px;
  width:50%;
  text-decoration: none;
  font-size: 18px;
}

.addFavAddress{
  margin: 20px;
  margin-bottom: 70px;
}

.favAddressInput{
  text-align: center;
  border:none;
  background-color: var(--black);
  border-bottom: 3px solid var(--pink);
  color:var(--white);
  margin-bottom: 20px;
  width:60%;
  text-decoration: none;
  font-size: 28px;
  margin-top: 20px;
}

#favNameError, #favLocError{
  display: none;
}

#planRouteSubmit{
  margin-top: 30px;
}

.black{
  color: var(--black);
}

.pink{
  color: var(--pink);
}


.favouriteicon{
  float:left;
  height: 30px;
  width: 30px;
}

.removebtn{
  float: right;
  background-color: red;
}

.removeicon{
  float: right;
}

#locationsHeader{
  color: var(--white);
  font-size: 20px;
}

.btn-group {
  text-align: center;
  background-color: var(--pink);
  border: 3px solid var(--pink);
  border-radius:2em;
  color:var(--white);
  margin-bottom: 10px;
  width:30%;
  text-decoration: none;
  font-size: 18px;
}

.favAddressBtn{
  border: 3px solid var(--pink);
  border-radius:2em;
  width: 80%;
}

.addFavAddressBtn{
  text-align: center;
  font-size: 18px;
  border: 3px solid var(--white);
  border-radius:2em;
  width: 30%;
  background-color: var(--black);
  color: var(--white);
}

.removebtn{
  border-radius:2em;
}

.btn-group button{
  border: none;
  background-color: var(--pink);
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

li{
  margin:0;
  padding:0;
}

#hiddenSection{
  display: none;
}

#daySelect{
  width: 100%;
  margin-top: 10px;
  margin-bottom: 25px;
}

.dayBox{
  display: inline-block;
  margin:0px 10px 0px 10px;
}

.dayButton{
  border: none;
  background-color: var(--black);
  padding-bottom: 2px;
  border-radius: 5px; 
}

.dayCurrent{
  background-color: var(--pink);
}

.dayButton h6{
  margin-bottom: 5px;
  color:var(--white); 
}

.dayMonth{
  margin-bottom: -2.5px;
}

.timeSelect{
  width: 100%;
  margin: 20px 0px 20px 0px;
  color:white;
}

.timeBox{
  background-color: var(--pink);
  color: white;
  border-radius: 5px;
  border:none;
  padding-left: 4px;
  font-size: 19px;
  margin: 5px 0px 5px 0px;
}

#timeError{
  text-align: center;
  display:none;
}

#startStopError, #endStopError{
  display: none;
}

.noRouteFound{
  text-align: center;
  font-size: 28px;
}
/* ... */

